Adding the routes to the catalogue module
